<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    android:background="#000000">

    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_add_planet"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_config"
        android:title="@string/menu_config_planet"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_travel"
        android:title="@string/menu_travel_planet"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_attack"
        android:title="@string/menu_attack_planet"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home_planet"
        android:orderInCategory="500"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_contact"
        android:title="@string/menu_contact_planet"
        android:orderInCategory="600"
        app:showAsAction="never" />


</menu>
